Rename database module to wow-database

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,7 +6,7 @@ phases:
     commands:
       - go get -u github.com/golang/lint/golint
       - go get -u github.com/go-sql-driver/mysql
-      - go get -u github.com/erikbryant/database
+      - go get -u github.com/erikbryant/wow-database
       - go get -u github.com/erikbryant/web
 
   pre_build: 
